--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Amber Moosa's Blog
-description: Cayman Blog Theme is a clean, responsive blogging theme for Jekyll and Gitlab/GitHub Pages.
+description: 
 show_downloads: true
 
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
